cup add current user edit link

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -93,6 +93,10 @@
                                                 </li>
                                                 <li>
                                                     <div class="dropdown-divider"></div>
+                                                    <a class="dropdown-item" href="/cup/user/{{ user.uuid }}/edit">{{ 'Профиль'|locale }}</a>
+                                                </li>
+                                                <li>
+                                                    <div class="dropdown-divider"></div>
                                                     <a class="dropdown-item" href="/user/logout">{{ 'Выход'|locale }}</a>
                                                 </li>
                                             </div>
