--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -29,49 +29,48 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th class="d-none">#</th>
+                                <th>Наименование</th>
+                                <th width="15%">Категория</th>
+                                <th width="15%" class="text-center no-sorting"></th>
+                            </tr>
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for category in categories.where('parent', category ? category.uuid : NIL).sortBy('order') %}
                                 <tr>
-                                    <th class="d-none">#</th>
-                                    <th>Наименование</th>
-                                    <th width="15%">Категория</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
+                                    <td class="text-center d-none">{{ category.order }}</td>
+                                    <td>{{ category.title }}</td>
+                                    <td width="15%">{{ categories.where('uuid', category.parent).first().title ?? '&mdash;' }}</td>
+                                    <td width="15%" class="text-center">
+                                        <form action="/cup/catalog/category/{{ category.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию?');">
+                                            <div class="btn-group">
+                                                <a href="/cup/catalog/category/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
+                                                    <i class="fas fa-fw fa-sitemap"></i>
+                                                    <span class="d-none d-md-inline-block">Подкатегории</span>
+                                                </a>
+                                                <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
+                                                    <i class="fas fa-fw fa-eye"></i>
+                                                    <span class="d-none d-md-inline-block">Номенклатура</span>
+                                                </a>
+                                                <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-sm btn-info">
+                                                    <i class="fas fa-fw fa-edit"></i>
+                                                    <span class="d-none d-md-inline-block">Изменить</span>
+                                                </a>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fas fa-fw fa-trash-alt"></i>
+                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {% for category in categories.where('parent', category ? category.uuid : NIL) %}
-                                    <tr>
-                                        <td class="text-center d-none">{{ category.order }}</td>
-                                        <td>{{ category.title }}</td>
-                                        <td>{{ categories.where('uuid', category.parent).first().title ?? '&mdash;' }}</td>
-                                        <td class="text-center">
-                                            <form action="/cup/catalog/category/{{ category.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/catalog/category/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
-                                                        <i class="fas fa-fw fa-sitemap"></i>
-                                                        <span class="d-none d-md-inline-block">Подкатегории</span>
-                                                    </a>
-                                                    <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
-                                                        <i class="fas fa-fw fa-eye"></i>
-                                                        <span class="d-none d-md-inline-block">Номенклатура</span>
-                                                    </a>
-                                                    <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-edit"></i>
-                                                        <span class="d-none d-md-inline-block">Изменить</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                            {% endfor %}
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
