--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -74,9 +74,8 @@
 
                         {# Tab: Список #}
                         <div class="tab-pane fade show active" id="list" role="tabpanel">
-                            <div class="table-responsive">
-                                <table data-table class="table table-striped table-hover" style="width: 100%;">
-                                    <thead>
+                            {% embed 'mixin/datatable.twig' %}
+                                {% block thead %}
                                     <tr>
                                         <th width="10%">№ Заказа</th>
                                         <th>Клиент</th>
@@ -84,11 +83,12 @@
                                         <th width="15%">Дата добавления</th>
                                         <th width="15%" class="text-center no-sorting"></th>
                                     </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for item in orders %}
+                                {% endblock %}
+
+                                {% block tbody %}
+                                    {% for item in orders.sortByDesc('date') %}
                                         <tr>
-                                            <td data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
+                                            <td width="10%" data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
                                                 {% if item.external_id %}
                                                     {{ item.external_id }} ({{ item.serial }})
                                                 {% else %}
@@ -96,11 +96,11 @@
                                                 {% endif %}
                                             </td>
                                             <td>{{ item.user and item.user.getName() ? item.user.getName() : item.delivery.client }}</td>
-                                            <td>
+                                            <td width="10%">
                                                 <span class="badge badge-secondary">{{ item.status }}</span>
                                             </td>
-                                            <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
-                                            <td class="text-center">
+                                            <td width="15%" data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i') }}</td>
+                                            <td width="15%" class="text-center">
                                                 <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить заказ?');">
                                                     <div class="btn-group">
                                                         <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info">
@@ -120,9 +120,8 @@
                                             </td>
                                         </tr>
                                     {% endfor %}
-                                    </tbody>
-                                </table>
-                            </div>
+                                {% endblock %}
+                            {% endembed %}
                         </div>
                     </div>
                 </div>
