--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -38,64 +38,74 @@
                     </div>
                 </div>
                 <div class="card-body">
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th class="d-none">#</th>
+                                <th>Наименование</th>
+                                <th width="10%">Цена</th>
+                                <th width="7%" class="text-center"><i class="fas fa-boxes" data-toggle="tooltip" data-placement="top" title="Объем упаковки"></i></th>
+                                <th width="7%" class="text-center"><i class="fas fa-warehouse" data-toggle="tooltip" data-placement="top" title="Количество на складе"></i></th>
+                                <th width="10%">Артикул</th>
+                                <th width="15%" class="text-center"></th>
+                            </tr>
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for item in products.sortBy('order') %}
+                                <tr>
+                                    <td class="text-center d-none">{{ item.order }}</td>
+                                    <td>
+                                        {{ item.title }}
+
+                                        <div class="text-black-50 float-right">
+                                            {% if item.special %}
+                                                <i class="fas fa-tag" data-toggle="tooltip" data-placement="right" title="Акция"></i>
+                                            {% endif %}
+                                        </div>
+                                    </td>
+                                    <td width="10%" class="text-right text-nowrap" data-order="{{ item.price }}">
+                                        {{ item.price|number_format(2, '.', ' ') }} {{ item.tax ? '[+'~ item.tax ~'%]'}}
+                                    </td>
+                                    <td width="7%" class="text-center" data-order="{{ item.volume }}">{{ item.getVolumeWithUnit() }}</td>
+                                    <td width="7%" class="text-center" data-order="{{ item.stock }}">{{ item.stock|format_number({fraction_digit: 2}) }}</td>
+                                    <td width="10%">
+                                        {% if item.vendorcode %}
+                                            <div>{{ item.vendorcode }}</div>
+                                        {% endif %}
+                                        {% if item.barcode %}
+                                            <div class="text-nowrap">
+                                                <i class="fas fa-barcode d-inline pr-1" data-toggle="tooltip" data-placement="right" title="Штрих код"></i>
+                                                {{ item.barcode }}
+                                            </div>
+                                        {% endif %}
+                                    </td>
+                                    <td width="15%" class="text-center">
+                                        <form action="/cup/catalog/product/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить продукт?');">
+                                            <div class="btn-group">
+                                                <a href="/cup/catalog/product/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                    <i class="fas fa-fw fa-edit"></i>
+                                                    <span class="d-none d-md-inline-block">Изменить</span>
+                                                </a>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fas fa-fw fa-trash-alt"></i>
+                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        {% endblock %}
+                    {% endembed %}
+
                     <div class="table-responsive">
                         <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
-                                <tr>
-                                    <th class="d-none">#</th>
-                                    <th>Наименование</th>
-                                    <th width="10%">Цена</th>
-                                    <th width="7%" class="text-center"><i class="fas fa-boxes" data-toggle="tooltip" data-placement="top" title="Объем упаковки"></i></th>
-                                    <th width="7%" class="text-center"><i class="fas fa-warehouse" data-toggle="tooltip" data-placement="top" title="Количество на складе"></i></th>
-                                    <th width="10%">Артикул</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
-                                </tr>
+
                             </thead>
                             <tbody>
-                                {% for item in products %}
-                                    <tr>
-                                        <td class="text-center d-none">{{ item.order }}</td>
-                                        <td>
-                                            {{ item.title }}
 
-                                            <div class="text-black-50 float-right">
-                                                {% if item.special %}
-                                                    <i class="fas fa-tag" data-toggle="tooltip" data-placement="right" title="Акция"></i>
-                                                {% endif %}
-                                            </div>
-                                        </td>
-                                        <td class="text-right text-nowrap" data-order="{{ item.price }}">
-                                            {{ item.price|number_format(2, '.', ' ') }} {{ item.tax ? '[+'~ item.tax ~'%]'}}
-                                        </td>
-                                        <td class="text-center" data-order="{{ item.volume }}">{{ item.getVolumeWithUnit() }}</td>
-                                        <td class="text-center" data-order="{{ item.stock }}">{{ item.stock|format_number({fraction_digit: 2}) }}</td>
-                                        <td>
-                                            {% if item.vendorcode %}
-                                                <div>{{ item.vendorcode }}</div>
-                                            {% endif %}
-                                            {% if item.barcode %}
-                                                <div class="text-nowrap">
-                                                    <i class="fas fa-barcode d-inline pr-1" data-toggle="tooltip" data-placement="right" title="Штрих код"></i>
-                                                    {{ item.barcode }}
-                                                </div>
-                                            {% endif %}
-                                        </td>
-                                        <td class="text-center">
-                                            <form action="/cup/catalog/product/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить продукт?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/catalog/product/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-edit"></i>
-                                                        <span class="d-none d-md-inline-block">Изменить</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
                             </tbody>
                         </table>
                     </div>
