--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -25,58 +25,57 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th>Название</th>
+                                <th width="20%">E-Mail адреса получателей</th>
+                                <th width="20%">Обработчик формы</th>
+                                <th width="15%" class="text-center"></th>
+                            </tr>
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for item in list %}
                                 <tr>
-                                    <th>Название</th>
-                                    <th width="20%">E-Mail адреса получателей</th>
-                                    <th width="20%">Обработчик формы</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
+                                    <td>
+                                        {{ item.title }}
+                                    </td>
+                                    <td width="20%">
+                                        {{ item.mailto|join('<br>+ ')|raw }}
+                                        {{ item.authorSend ? '<br>+ заявитель' }}
+                                    </td>
+                                    <td width="20%">
+                                        {% include 'cup/form.twig' with {
+                                            'type': 'text',
+                                            'args': {
+                                                'value': '/form/' ~ item.address,
+                                                'readonly': true
+                                            }
+                                        } %}
+                                    </td>
+                                    <td width="15%" class="text-center">
+                                        <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
+                                            <div class="btn-group">
+                                                <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-sm btn-outline-info">
+                                                    <i class="fas fa-fw fa-eye"></i>
+                                                    <span class="d-none d-md-inline-block">Заявки</span>
+                                                </a>
+                                                <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                    <i class="fas fa-fw fa-edit"></i>
+                                                    <span class="d-none d-md-inline-block">Изменить</span>
+                                                </a>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fas fa-fw fa-trash-alt"></i>
+                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in list %}
-                                    <tr>
-                                        <td>
-                                            {{ item.title }}
-                                        </td>
-                                        <td>
-                                            {{ item.mailto|join('<br>+ ')|raw }}
-                                            {{ item.authorSend ? '<br>+ заявитель' }}
-                                        </td>
-                                        <td>
-                                            {% include 'cup/form.twig' with {
-                                                'type': 'text',
-                                                'args': {
-                                                    'value': '/form/' ~ item.address,
-                                                    'readonly': true
-                                                }
-                                            } %}
-                                        </td>
-                                        <td class="text-center">
-                                            <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-sm btn-outline-info">
-                                                        <i class="fas fa-fw fa-eye"></i>
-                                                        <span class="d-none d-md-inline-block">Заявки</span>
-                                                    </a>
-                                                    <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-edit"></i>
-                                                        <span class="d-none d-md-inline-block">Изменить</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                            {% endfor %}
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
