--- a/src/Template/cup/guestbook/index.twig
+++ b/src/Template/cup/guestbook/index.twig
@@ -21,56 +21,55 @@
                 </div>
 
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
-                                <tr>
-                                    <th width="10%">Статус</th>
-                                    <th>Имя</th>
-                                    <th width="15%">Дата создания</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in list %}
-                                    <tr>
-                                        <td class="text-center">
-                                            {% if item.status == 'work' %}
-                                                <span class="badge badge-default">Активный</span>
-                                            {% endif %}
-                                            {% if item.status == 'moderate' %}
-                                                <span class="badge badge-secondary">Новый</span>
-                                            {% endif %}
-                                        </td>
-                                        <td>
-                                            {{ item.name }}
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th width="10%" class="text-center">Статус</th>
+                                <th>Имя</th>
+                                <th width="15%">Дата создания</th>
+                                <th width="15%" class="text-center"></th>
+                            </tr>
+                        {% endblock %}
 
-                                            {% if item.email %}
-                                                <a href="mailto:{{ item.email }}" class="text-black-50 float-right">
-                                                    <i class="fa fa-envelope"></i>
+                        {% block tbody %}
+                            {% for item in list.sortByDesc('date') %}
+                                <tr>
+                                    <td width="10%" class="text-center">
+                                        {% if item.status == 'work' %}
+                                            <span class="badge badge-default">Активный</span>
+                                        {% endif %}
+                                        {% if item.status == 'moderate' %}
+                                            <span class="badge badge-secondary">Новый</span>
+                                        {% endif %}
+                                    </td>
+                                    <td>
+                                        {{ item.name }}
+
+                                        {% if item.email %}
+                                            <a href="mailto:{{ item.email }}" class="text-black-50 float-right">
+                                                <i class="fa fa-envelope"></i>
+                                            </a>
+                                        {% endif %}
+                                    </td>
+                                    <td width="15%" data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
+                                    <td width="15%" class="text-center">
+                                        <form action="/cup/guestbook/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
+                                            <div class="btn-group">
+                                                <a href="/cup/guestbook/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                    <i class="fas fa-fw fa-edit"></i>
+                                                    <span class="d-none d-md-inline-block">Изменить</span>
                                                 </a>
-                                            {% endif %}
-                                        </td>
-                                        <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
-                                        <td class="text-center">
-                                            <form action="/cup/guestbook/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/guestbook/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-edit"></i>
-                                                        <span class="d-none d-md-inline-block">Изменить</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fas fa-fw fa-trash-alt"></i>
+                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </td>
+                                </tr>
+                            {% endfor %}
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
