--- a/src/Template/cup/publication/category/index.twig
+++ b/src/Template/cup/publication/category/index.twig
@@ -24,47 +24,46 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th>Название</th>
+                                <th width="15%">Категория</th>
+                                <th width="7%">Публичная</th>
+                                <th width="7%">Вложенные</th>
+                                <th width="15%" class="text-center"></th>
+                            </tr>
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for item in list.sortBy('title') %}
                                 <tr>
-                                    <th>Название</th>
-                                    <th width="15%">Категория</th>
-                                    <th width="7%">Публичная</th>
-                                    <th width="7%">Вложенные</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
+                                    <td>{{ item.title }}</td>
+                                    <td width="15%">{{ list.where('uuid', item.parent).first().title ?? '&mdash;' }}</td>
+                                    <td width="7%" class="text-center" data-order="{{ item.public }}">
+                                        {{ item.public ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
+                                    </td>
+                                    <td width="7%" class="text-center" data-order="{{ item.children }}">
+                                        {{ item.children ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
+                                    </td>
+                                    <td width="15%" class="text-center">
+                                        <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию публикаций?');">
+                                            <div class="btn-group">
+                                                <a href="/cup/publication/category/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                    <i class="fas fa-fw fa-edit"></i>
+                                                    <span class="d-none d-md-inline-block">Изменить</span>
+                                                </a>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fas fa-fw fa-trash-alt"></i>
+                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in list %}
-                                    <tr>
-                                        <td>{{ item.title }}</td>
-                                        <td>{{ list.where('uuid', item.parent).first().title ?? '&mdash;' }}</td>
-                                        <td class="text-center" data-order="{{ item.public }}">
-                                            {{ item.public ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
-                                        </td>
-                                        <td class="text-center" data-order="{{ item.children }}">
-                                            {{ item.children ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
-                                        </td>
-                                        <td class="text-center">
-                                            <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию публикаций?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/publication/category/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-edit"></i>
-                                                        <span class="d-none d-md-inline-block">Изменить</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                            {% endfor %}
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
