--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -93,19 +93,19 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
-                                <tr>
-                                    <th width="15%">Логин</th>
-                                    <th>Фамилия и имя</th>
-                                    <th width="15%">Группа</th>
-                                    <th width="15%">Дата регистрации / посещения</th>
-                                    <th width="15%" class="text-center no-sorting"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for user in list %}
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th width="15%">Логин</th>
+                                <th>Фамилия и имя</th>
+                                <th width="15%">Группа</th>
+                                <th width="15%">Дата регистрации / посещения</th>
+                                <th width="15%" class="text-center"></th>
+                            </tr>
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for user in list.sortByDesc('session.date') %}
                                     <tr class="
                                         {{
                                             user.status == reference('/App/Domain/Types/UserStatusType::STATUS_DELETE')
@@ -117,7 +117,7 @@
                                             )
                                         }}
                                     ">
-                                        <td data-order="{{ user.username }}">{{ user.username ?: '<code>Без логина</code>'|raw }}</td>
+                                        <td width="15%" data-order="{{ user.username }}">{{ user.username ?: '<code>Без логина</code>'|raw }}</td>
                                         <td>
                                             {{ user.getName() ?: '<code>Без имени</code>'|raw }}
                                             {{ user.getEmail() ? ('<br>' ~ user.getEmail())|raw : '' }}
@@ -131,12 +131,12 @@
                                                 {% endif %}
                                             </div>
                                         </td>
-                                        <td>{{ user.group.title ?? '<code>Без группы</code>' }}</td>
-                                        <td data-order="{{ user.session.date.getTimestamp() }}">
+                                        <td width="15%">{{ user.group.title ?? '<code>Без группы</code>' }}</td>
+                                        <td width="15%" data-order="{{ user.session.date.getTimestamp() }}">
                                             {{ user.register|df('d.m.Y H:i:s') }}
                                             {{ user.session.date ? ('/<br>' ~ user.session.date|df('d.m.Y H:i:s'))|raw : '' }}
                                         </td>
-                                        <td class="text-center">
+                                        <td width="15%" class="text-center">
                                             <form action="/cup/user/{{ user.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить пользователя?');">
                                                 <div class="btn-group">
                                                     <a href="/cup/user/{{ user.uuid }}/edit" class="btn btn-sm btn-info">
@@ -154,9 +154,8 @@
                                         </td>
                                     </tr>
                                 {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
