--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -24,23 +24,21 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
                             <tr>
                                 <th>E-Mail</th>
                                 <th width="20%">Дата добавления</th>
-                                <th width="10%" class="text-center no-sorting"></th>
+                                <th width="15%" class="text-center"></th>
                             </tr>
-                            </thead>
-                            <tbody>
-                            {% for item in list %}
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for item in list.sortByDesc('date') %}
                                 <tr>
-                                    <td>
-                                        {{ item.email }}
-                                    </td>
-                                    <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
-                                    <td class="text-center">
+                                    <td>{{ item.email }}</td>
+                                    <td width="20%" data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
+                                    <td width="15%" class="text-center">
                                         <form action="/cup/user/subscriber/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить адрес подписчика?');">
                                             <div class="btn-group">
                                                 <button type="submit" class="btn btn-sm btn-danger">
@@ -52,9 +50,8 @@
                                     </td>
                                 </tr>
                             {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
