--- a/src/Template/mixin/datatable.twig
+++ b/src/Template/mixin/datatable.twig
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div data-table="{{ tableId }}" class="clusterize table-responsive">
+<div data-table="{{ tableId }}" class="clusterize">
     <table class="table table-striped table-hover w-100">
         <thead>
             {% block thead %}
