--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -24,39 +24,38 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table data-table class="table table-striped table-hover" style="width: 100%;">
-                            <thead>
+                    {% embed 'mixin/datatable.twig' %}
+                        {% block thead %}
+                            <tr>
+                                <th>Дата получения</th>
+                                <th width="15%" class="text-center no-sorting"></th>
+                            </tr>
+                        {% endblock %}
+
+                        {% block tbody %}
+                            {% for item in list %}
                                 <tr>
-                                    <th>Дата получения</th>
-                                    <th width="10%" class="text-center no-sorting"></th>
+                                    <td data-order="{{ item.date.getTimestamp() }}">
+                                        {{ item.date|df('d.m.Y H:i:s') }}
+                                    </td>
+                                    <td width="15%" class="text-center">
+                                        <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
+                                            <div class="btn-group">
+                                                <a href="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}" class="btn btn-sm btn-info">
+                                                    <i class="fas fa-fw fa-eye"></i>
+                                                    <span class="d-none d-md-inline-block">Посмотреть</span>
+                                                </a>
+                                                <button type="submit" class="btn btn-sm btn-danger">
+                                                    <i class="fas fa-fw fa-trash-alt"></i>
+                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                </button>
+                                            </div>
+                                        </form>
+                                    </td>
                                 </tr>
-                            </thead>
-                            <tbody>
-                                {% for item in list %}
-                                    <tr>
-                                        <td data-order="{{ item.date.getTimestamp() }}">
-                                            {{ item.date|df('d.m.Y H:i:s') }}
-                                        </td>
-                                        <td class="text-center">
-                                            <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
-                                                <div class="btn-group">
-                                                    <a href="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}" class="btn btn-sm btn-info">
-                                                        <i class="fas fa-fw fa-eye"></i>
-                                                        <span class="d-none d-md-inline-block">Посмотреть</span>
-                                                    </a>
-                                                    <button type="submit" class="btn btn-sm btn-danger">
-                                                        <i class="fas fa-fw fa-trash-alt"></i>
-                                                        <span class="d-none d-md-inline-block">Удалить</span>
-                                                    </button>
-                                                </div>
-                                            </form>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
+                            {% endfor %}
+                        {% endblock %}
+                    {% endembed %}
                 </div>
             </div>
         </div>
