--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -486,6 +486,7 @@
     <script src="/assets/js/core/popper.min.js?v={{ sha }}"></script>
     <script src="/assets/js/core/tooltip.min.js?v={{ sha }}"></script>
     <script src="/assets/js/core/bootstrap.min.js?v={{ sha }}"></script>
+    <script src="/assets/js/core/bootstrap-tagsinput.min.js?v={{ sha }}"></script>
     <script src="/assets/js/core/moment.min.js?v={{ sha }}"></script>
     <script src="/assets/js/core/moment-with-locales.min.js?v={{ sha }}"></script>
 
